--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="card mb-3 border-0">
             <div class="row g-0 align-items-center">
                 <div class="col-md-4 order-md-1">
-                    <img class="rounded-5 scale" src="Images/meMask.jpg" alt="Card image" style="width:100%">
+                    <img class="rounded-5 scale" src="Images/me.jpg" alt="Card image" style="width:100%">
                 </div>
                 <div class="col-md-8">
                     <div class="card border-0">
