--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
                 <div class="offcanvas-body">
                     <ul class="navbar-nav flex-grow-1 pe-3 mx-auto">
+                        <li class="nav-item">
+                            <a href="myapp://success">click to go to myapp</a>
+                        </li>
                         <li class="nav-item list active" id="navHome1">
                             <a href="#" class="nav-link" aria-current="page" id="navHome">Home</a>
                         </li>
